src/assets/css/blog.scss
@use "variables";

.blog {
  .content-body {
    padding: 84px 84px 0;
    margin: 100px 0px 0;
  }

  .featured-blog-post {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 140px;

    .post-image-container {
      position: relative;
      width: 75%;
      aspect-ratio: 2 / 1;
    }

    h5 {
      margin-top: 60px;
      font-family: variables.$ap-bold;
      font-size: 15px;
    }

    h3 {
      margin-top: 24px;
      font-family: variables.$ap;
      max-width: 50%;
      font-size: 40px;
      line-height: 46px;
      text-align: center;
    }
  }

  .blog-posts {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 50px;
  }

  .c1 {
    margin-top: 120px;
  }

  .c3 {
    margin-top: 120px;
  }

  .regular-blog-post {
    .post-image-container {
      position: relative;
      width: 100%;
      aspect-ratio: 3 / 2;
    }

    h5 {
      margin-top: 24px;
      font-family: variables.$ap;
      font-size: 16px;
      line-height: 22px;
    }

    h3 {
      margin-top: 4px;
      font-family: variables.$ap;
      font-size: 22px;
      line-height: 28px;
    }
  }

  .image {
    top: 0;
    position: absolute;
    width: 100%;
    height: 100%;

    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
  }

  .nav-arrow {
    margin-top: 22px;
    width: 21px;
    position: relative;
    height: 20px;
    mask: url("/images/nav-arrow.svg") no-repeat 50% 50%;
    mask-size: contain;
    background-color: #975399;
  }

  h3 {
    font-family: variables.$opt;
    font-size: 46px;
    line-height: 57px;
  }

  @media all and (max-width: variables.$mobile-max-bp) {
    .content-body {
      padding: 84px 24px;
      margin: 25px 0 0;
    }

    .featured-blog-post {
      margin-bottom: 80px;

      .post-image-container {
        width: 100%;
      }
    }

    .blog-posts {
      display: grid;
      grid-template-columns: 1fr;
      grid-gap: 48px;
    }

    .regular-blog-post {
      .post-image-container {
        aspect-ratio: 2 / 1;
      }
    }
  }
}

